# reflectjson

./: Makefile  README.md  json4str.c  jsonobject.h  libreflectjson.h  testjson.cc
docs/: architecture.md  jsonentity.md  jsonobject.md  reflect.md
src/: Makefile.am  Makefile.in  config.h.in  config.status  configure  configure.ac  json2str.c  jsonchilds.c  jsonentity.c  jsonobject.c  jsonobject.h  jsonreflect.c  libreflectjson.h  llqcharsetdetect.h  llqparameters.h  llqreflect.h  llqvarymem.h
src/example/: testentity.c  testentity.json
